fixing mobile overflow

--- a/src/app/mindmap/mindmap.component.css
+++ b/src/app/mindmap/mindmap.component.css
@@ -1,12 +1,7 @@
 .content {
-    display: grid;
-    grid-gap: 10px;
-    grid-auto-rows: minmax(20px, auto);
     margin: 32px auto;
     padding: 0 16px;
     max-width: 960px;
-    flex-direction: column;
-    align-items: center;
 }
 
 h1 {
